# py-rcsb_workflow

./: .dockerignore  .gitignore  Dockerfile  DockerfileCOMBO  HISTORY.txt  MANIFEST.in  README.md  azure-pipelines.yml  azure-template-publish-job.yml  azure-template-tox-job.yml  imgWfDockerfile  pylintrc  pyproject.toml  requirements.txt  setup.py  tmp-azure-template-tox-job.yml  tox.ini
.github/workflows/: workflow-docker.yaml
rcsb/workflow/bcif/: bcif_functions.py  bcif_workflow_utilities.py  task_functions.py  workflow_functions.py
rcsb/workflow/chem/: ChemCompFileWorkflow.py  ChemCompImageWorkflow.py  ChemCompSearchIndexWorkflow.py  __init__.py
rcsb/workflow/cli/: BcifExec.py  ChemSearchIndexExec.py  ExDbExec.py  ExdbExport.py  ImgExec.py  __init__.py  imgs_cli.py
rcsb/workflow/hashUtils/: idHash.py
rcsb/workflow/mongo/: IncrementalExporter.py
rcsb/workflow/refstats/: LigandQualityReferenceGenerator.py  ResidueRsccReferenceGenerator.py
rcsb/workflow/stats/: LigandQualityReferenceGenerator.py  ResidueRsccReferenceGenerator.py
rcsb/workflow/targets/: ProteinTargetSequenceExecutionWorkflow.py  ProteinTargetSequenceWorkflow.py
rcsb/workflow/tests/: bcifConfig.yml  fixturePdbxLoader.py  testBcifWorkflow.py  testChemCompFileWorkflow.py  testChemCompImageWorkflow.py  testChemCompSearchIndexWorkflow.py  testExDbWorkflow.py  testLigandQualityReferenceGenerator.py  testPdbCsmImageWorkflow.py  testProteinTargetSequenceWorkflow.py  testResidueRsccReferenceGenerator.py
rcsb/workflow/tests/test-data/: chemref-mapping-data.json  components-abbrev.cif  prdcc-abbrev.cif
rcsb/workflow/tests/test-data/Pharos/: pharos-readme.txt
rcsb/workflow/tests/test-data/bcif/: pdbx_core_ids-1.txt
rcsb/workflow/tests/test-data/chem_comp/: cc-full-chemical-component-data.pic
rcsb/workflow/wuw/: BcifWorkflow.py  ExDbWorkflow.py  PdbCsmImageWorkflow.py  WuwUtils.py
